--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "@openzeppelin/contracts": "^4.9.3",
         "@openzeppelin/test-helpers": "^0.5.16",
+        "@radix-ui/react-label": "^2.1.7",
         "@radix-ui/react-toast": "^1.2.14",
         "@truffle/hdwallet-provider": "^2.1.15",
         "class-variance-authority": "^0.7.1",
