--- a/property-dapp-frontend/package.json
+++ b/property-dapp-frontend/package.json
@@ -9,29 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.1.1",
     "@pinata/sdk": "^2.1.0",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
     "@tanstack/react-query": "^5.17.19",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.1",
     "ethers": "^5.8.0",
+    "framer-motion": "^12.16.0",
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.49.2",
+    "react-hook-form": "^7.57.0",
+    "react-hot-toast": "^2.5.2",
     "sonner": "^2.0.5",
-    "tailwind-merge": "^2.2.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "viem": "^1.21.4",
     "wagmi": "^1.4.13",
     "web3": "^1.10.0",
-    "zod": "^3.22.4"
+    "zod": "^3.25.57"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
